--- a/BlackJack.html
+++ b/BlackJack.html
@@ -9,16 +9,17 @@
 <body>
   <div class="mesa">
     <div class="lado-dealer">
-        <div class="dealer">DEALER</div>
+        <div class="dealer" id="dealer">DEALER</div>
     </div>
-    <div class="jugadores">
-        <div class="puesto p0">Jugador 1</div>
-        <div class="puesto p1">Jugador 2</div>
-        <div class="puesto p2">Jugador 3</div>
-        <div class="puesto p3">Jugador 4</div>
-        <div class="puesto p4">Jugador 5</div>
-        <div class="puesto p5">Jugador 6</div>
-        <div class="puesto p6">Jugador 7</div>    
+    <div class="jugadores" id="players">
+        <div class="puesto p p0" id="p0">Jugador 1</div>
+        <div class="puesto p p1" id="p1">Jugador 2</div>
+        <div class="puesto p p2" id="p2">Jugador 3</div>
+        <div class="puesto p p3" id="p3">Jugador 4</div>
+        <div class="puesto p p4" id="p4">Jugador 5</div>
+        <div class="puesto p p5" id="p5">Jugador 6</div>
+        <div class="puesto p p6" id="p6">Jugador 7</div>    
   </div>
+  <script src="BlackJack.js"></script>
 </body>
 </html>
