--- a/BlackJack.html
+++ b/BlackJack.html
@@ -9,16 +9,32 @@
 <body>
   <div class="mesa">
     <div class="lado-dealer">
-        <div class="dealer" id="dealer">DEALER</div>
+        <div class="dealer" id="dealer">DEALER
+          <div class="mano" id="manoD"></div>
+        </div>
     </div>
     <div class="jugadores" id="players">
-        <div class="puesto p p0" id="p0">Jugador 1</div>
-        <div class="puesto p p1" id="p1">Jugador 2</div>
-        <div class="puesto p p2" id="p2">Jugador 3</div>
-        <div class="puesto p p3" id="p3">Jugador 4</div>
-        <div class="puesto p p4" id="p4">Jugador 5</div>
-        <div class="puesto p p5" id="p5">Jugador 6</div>
-        <div class="puesto p p6" id="p6">Jugador 7</div>    
+        <div class="puesto p p0" id="p0">Jugador 1
+          <div class="mano" id="mano0"></div>
+        </div>
+        <div class="puesto p p1" id="p1">Jugador 2
+          <div class="mano" id="mano1"></div>
+        </div>
+        <div class="puesto p p2" id="p2">Jugador 3
+          <div class="mano" id="mano2"></div>
+        </div>
+        <div class="puesto p p3" id="p3">Jugador 4
+          <div class="mano" id="mano3"></div>
+        </div>
+        <div class="puesto p p4" id="p4">Jugador 5
+          <div class="mano" id="mano4"></div>
+        </div>
+        <div class="puesto p p5" id="p5">Jugador 6
+          <div class="mano" id="mano5"></div>
+        </div>
+        <div class="puesto p p6" id="p6">Jugador 7
+          <div class="mano" id="mano6"></div>
+        </div>    
   </div>
   <script src="BlackJack.js"></script>
 </body>
